# RT_42

./: CMakeLists.txt  Make_CL  Makefile  ProgressBar.sh  READEME.md  README.md  RT  a.out  auteur  cone.c  coordinates_collision.c  cylinder.c  diffused_light.c  event_keyboard.c  ft_vec.c  get_camera.c  get_object.c  get_scene.c  get_spot.c  light.c  main.c  plan.c  play_scene.c  reflection_light.c  rt.h  run_raytracing.c  scene1  scene2  scene3  scene_de_boule  spec_light.c  sphere.c  torus.c
OpenCL/: .main.c.swo  .main.c.swp  hello  hello.cl  main.c
head/: '  .lib_RT.h.swp  lib_RT.h  lib_rt.h
head_cl/: lib_RT_CL.hl
libft/: Makefile
libft/head/: libft.h
libft/src/: ._ft_atoi.c  free_tab.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstnew.c  ft_lstpushback.c  ft_memccpy.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_putchar_err.c  ft_putchar_fd.c  ft_putstr_err.c  ft_putstr_fd.c  ft_putstr_tab.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcmp_case.c  ft_strconc.c  ft_strcpy.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlen.c  ft_strlen_tab.c  ft_strnbr_idtchar.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strrchr.c  ft_strsplit.c  (+8 more)
map/: scene2
minilibx_macos/: ._font.c  ._font.xcf  ._man  ._mlx.h  ._mlx_init_loop.m  ._mlx_int.h  ._mlx_int_str_to_wordtab.c  ._mlx_new_image.m  ._mlx_new_window.h  ._mlx_new_window.m  ._mlx_rgb.c  ._mlx_shaders.c  ._mlx_xpm.c
minilibx_macos/man/: ._man3
mouve/: matrix_mouve.c  mouve_camera.c
scene/: .cylinder.ortv1.swp  .scene.ortv1.swp  .scene3.ortv1.swp  4_objects.ort  cone.ort  cone.ortv1  cube.ort  cylinder.ort  cylinder.ortv1  cylindre.ortv1  ellipsoid.ort  loup.ort  mirror.ort  papillon.ort  plan.ort  plan.ortv1  plan1.ort  scene.ort  scene.ortv1  scene2.ort  scene2.ortv1  scene3.ortv1  scene4.ortv1  scene5.ortv1  scene_de_boobs.ortv1  scene_simple.ort  sphere.ort  sphere.ort 2  sphere.ortv1  sphere2.ort  test.ort  torus.ort  triangle.ort
src/: .main.c.swp  camera.c  cone.c  coordinates_collision.c  create_window.c  cylinder.c  diffused_light.c  err_cl.c  event_everything.c  ft_lstpushback.c  ft_strconc.c  get_camera.c  get_object.c  get_scene.c  get_spot.c  get_src_opencl.c  light.c  lunch_opencl.c  main.c  parser.c  plan.c  play_scene.c  progress_bar.c  run_raytracing.c  specular_light.c  sphere.c  torus.c  vector_formula_1.c  vector_formula_2.c
src/SDL2/: create_window.c  debug_move.c  event_everything.c  init_keyboard.c  init_mouse.c  key_press.c  key_release.c  pixel_put.c  push_to_window.c  window_resize.c
src/clustering/: cluster_create_buffer.c  cluster_parallelisation.c  cluster_write_buffer.c  host.c  protocol_cmd.c  slave.c
src/event_RT/: event_RT.c  fps_info.c  move.c  rotate.c
src/event_rt/: event_rt.c  fps_info.c  move.c  rotate.c
src/media/: screenshot.c
src/mouve/: matrix_rotate.c
src/move/: matrix_rotate.c
src/object/: .cone.c.swp  .cylinder.c.swo  .cylinder.c.swp  .plan.c.swp  .sphere.c.swp  cone.c  cylinder.c  ellipsoid.c  plan.c  sphere.c  torus.c  triangle.c
src/opencl/: err_cl.c  err_cl_sub.c  get_src_opencl.c  lunch_opencl.c
src/parser/: .get_color.c.swp  .get_file_raw.c.swp  .get_scene.c.swp  .get_spot.c.swp  get_camera.c  get_color.c  get_cone.c  get_cylinder.c  get_file_mlt.c  get_file_obj.c  get_file_ortv1.c  get_file_raw.c  get_ort.c  get_ort_config.c  get_ort_cylinder.c  get_ort_plan.c  get_ort_sphere.c  get_ort_texture.c  get_ort_torus.c  get_plan.c  get_scene.c  get_sphere.c  get_spot.c  get_torus.c  get_vec3.c
src/ray_tracing/: .OCL_run_raytracing.c.swp  .refraction.c.swp  .run_raytracing.c.swp  OCL_run_raytracing.c  camera.c  check_object.c  ocl_run_raytracing.c  play_scene.c  reflection.c  reflexion.c  refraction.c  run_object.c  run_raytracing.c
src/shader/: '  .diffused_light.c.swp  .light.c.swp  .specular_light.c.swp  algo_perlin.c  bois_effect.c  bump_mapping.c  diffused_light.c  filtered_RGB.c  filtered_black_white.c  filtered_r_b.c  gaussien_blur.c  light.c  limit.c  limit_rgba.c  maths_perlin.c  perlin.c  perlin_noise  perlin_noise.c  perlin_noise2.c  reflection.c  specular_light.c  super_sampling.c  voronoi.c
src/vector/: coordinates_collision.c  cubic_equation.c  quadratic_equation.c  quartic_equation.c  vector_formula_1.c  vector_formula_2.c  vector_rotate.c
src_cl/: .run_raytracing.cl.swp  Makefile  ProgressBar.sh  run_raytracing.cl  run_scene.cl
src_cl/head_cl/: lib_RT_CL.hl
src_cl/object/: cone.cl  cylinder.cl  plan.cl  sphere.cl
src_cl/ray_tracing/: camera.cl  check_object.cl  run_object.cl  run_raytracing.cl
src_cl/scene/: scene2.ortv1  scene3.ortv1  (+1 more)
(+126 files in other folders)
