cmake_minimum_required(VERSION 3.6)
project(rt_filter)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    head/lib_RT.h
    libft/head/libft.h
    libft/src/free_tab.c
    libft/src/ft_atoi.c
    libft/src/ft_bzero.c
    libft/src/ft_isalnum.c
    libft/src/ft_isalpha.c
    libft/src/ft_isascii.c
    libft/src/ft_isdigit.c
    libft/src/ft_isprint.c
    libft/src/ft_itoa.c
    libft/src/ft_lstadd.c
    libft/src/ft_lstdel.c
    libft/src/ft_lstdelone.c
    libft/src/ft_lstiter.c
    libft/src/ft_lstmap.c
    libft/src/ft_lstnew.c
    libft/src/ft_memalloc.c
    libft/src/ft_memccpy.c
    libft/src/ft_memchr.c
    libft/src/ft_memcmp.c
    libft/src/ft_memcpy.c
    libft/src/ft_memdel.c
    libft/src/ft_memmove.c
    libft/src/ft_memset.c
    libft/src/ft_putchar.c
    libft/src/ft_putchar_err.c
    libft/src/ft_putchar_fd.c
    libft/src/ft_putendl.c
    libft/src/ft_putendl_fd.c
    libft/src/ft_putnbr.c
    libft/src/ft_putnbr_fd.c
    libft/src/ft_putstr.c
    libft/src/ft_putstr_err.c
    libft/src/ft_putstr_fd.c
    libft/src/ft_putstr_tab.c
    libft/src/ft_strcat.c
    libft/src/ft_strchr.c
    libft/src/ft_strclr.c
    libft/src/ft_strcmp.c
    libft/src/ft_strcpy.c
    libft/src/ft_strdel.c
    libft/src/ft_strdup.c
    libft/src/ft_strequ.c
    libft/src/ft_striter.c
    libft/src/ft_striteri.c
    libft/src/ft_strjoin.c
    libft/src/ft_strlcat.c
    libft/src/ft_strlen.c
    libft/src/ft_strlen_tab.c
    libft/src/ft_strmap.c
    libft/src/ft_strmapi.c
    libft/src/ft_strnbr_idtchar.c
    libft/src/ft_strncat.c
    libft/src/ft_strncmp.c
    libft/src/ft_strncpy.c
    libft/src/ft_strnequ.c
    libft/src/ft_strnew.c
    libft/src/ft_strnstr.c
    libft/src/ft_strrchr.c
    libft/src/ft_strrev.c
    libft/src/ft_strsplit.c
    libft/src/ft_strstr.c
    libft/src/ft_strsub.c
    libft/src/ft_strtrim.c
    libft/src/ft_swap.c
    libft/src/ft_tolower.c
    libft/src/ft_toupper.c
    libft/src/get_next_line.c
    libft/src/matrix_sqrt.c
    libft/src/matrix_sqrt_free.c
    src/clustering/host.c
    src/clustering/slave.c
    src/event_RT/event_RT.c
    src/event_RT/fps_info.c
    src/media/screenshot.c
    src/move/matrix_rotate.c
    src/object/cone.c
    src/object/cylinder.c
    src/object/plan.c
    src/object/sphere.c
    src/object/torus.c
    src/opencl/err_cl.c
    src/opencl/err_cl_sub.c
    src/opencl/get_src_opencl.c
    src/opencl/lunch_opencl.c
    src/parser/extension_obj/get_file_mlt.c
    src/parser/extension_obj/get_file_obj.c
    src/parser/extension_ort/get_file_ort.c
    src/parser/extension_ort/get_ort.c
    src/parser/extension_ort/get_ort_cone.c
    src/parser/extension_ort/get_ort_config.c
    src/parser/extension_ort/get_ort_cylinder.c
    src/parser/extension_ort/get_ort_group.c
    src/parser/extension_ort/get_ort_plan.c
    src/parser/extension_ort/get_ort_scene.c
    src/parser/extension_ort/get_ort_sphere.c
    src/parser/extension_ort/get_ort_texture.c
    src/parser/extension_ort/get_ort_torus.c
    src/parser/extension_ortv1/get_camera.c
    src/parser/extension_ortv1/get_color.c
    src/parser/extension_ortv1/get_cone.c
    src/parser/extension_ortv1/get_cylinder.c
    src/parser/extension_ortv1/get_file_ortv1.c
    src/parser/extension_ortv1/get_plan.c
    src/parser/extension_ortv1/get_scene.c
    src/parser/extension_ortv1/get_sphere.c
    src/parser/extension_ortv1/get_spot.c
    src/parser/extension_ortv1/get_torus.c
    src/parser/extension_ortv1/get_vec3.c
    src/parser/get_file_raw.c
    src/ray_tracing/camera.c
    src/ray_tracing/check_object.c
    src/ray_tracing/OCL_run_raytracing.c
    src/ray_tracing/play_scene.c
    src/ray_tracing/run_object.c
    src/ray_tracing/run_raytracing.c
    src/SDL2/create_window.c
    src/SDL2/event_everything.c
    src/SDL2/init_keyboard.c
    src/SDL2/init_mouse.c
    src/SDL2/key_press.c
    src/SDL2/key_release.c
    src/SDL2/push_to_window.c
    src/SDL2/window_resize.c
    src/shader/bois_effect.c
    src/shader/bump_mapping.c
    src/shader/diffused_light.c
    src/shader/filtered_r_b.c
    src/shader/filtered_RGB.c
    src/shader/gaussien_blur.c
    src/shader/light.c
    src/shader/limit.c
    src/shader/perlin_noise.c
    src/shader/perlin_noise2.c
    src/shader/sepia.c
    src/shader/specular_light.c
    src/shader/super_sampling.c
    src/vector/coordinates_collision.c
    src/vector/vector_formula_1.c
    src/vector/vector_formula_2.c
    src/main.c)

include_directories(head)
include_directories(libft/head)

add_executable(rt_filter ${SOURCE_FILES})